--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+	<div>
+  <p>My current favorite song is "drivers license" by Olivia Rodrigo.</p>
+  <p>You can listen to it on <a href="https://www.youtube.com/watch?v=ZmDBbnmKpqQ" target="_blank">YouTube</a>.</p>
+</div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
